# chest-cancer-classification

./: .gitignore  main.py  overrides.txt  params.yaml  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_trainer.ipynb
src/cnnClassifier/: __init__.py
src/cnnClassifier/components/: data_ingestion.py  model_trainer.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: stage_01_data_ingestion.py  stage_03_model_trainer.py
src/cnnClassifier/utils/: common.py
