[project]
name = "chest-cancer-classification"
version = "0.1.0"
description = "A deep learning package for chest cancer classification using CNN"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jatinHaldankar", email = "haldankarjatin286@gmail.com" },
]
urls = { "Homepage" = "https://github.com/jatinHaldankar/chest-cancer-classification", "Bug Tracker" = "https://github.com/jatinHaldankar/chest-cancer-classification/issues" }
dependencies = [
    "dvc>=3.67.1",
    "ensure==1.0.2",
    "flask>=2.3.3",
    "flask-cors>=6.0.2",
    "gdown>=6.0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "mlflow==2.2.2",
    "notebook>=7.5.6",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "python-box==6.0.2",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow-cpu==2.15.0",
    "tqdm>=4.67.3",
    "types-pyyaml>=6.0.12.20260518",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-environments = [
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
